# llm-compensation-bias

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: bias_project_desc.md
documentation/: bias_project_desc.md
notebooks/: income_analysis_by_demographics.ipynb
scripts/: generate_reference_csv.py
settings/: config.yaml
settings/prompts/: fair.prompt.yml  fair.yaml  fair_short.prompt.yml  neutral.prompt.yml  neutral.yaml  neutral_short.prompt.yml  realistic.prompt.yml  realistic.yaml  realistic_short.prompt.yml
src/: __init__.py  logging_config.py  main.py
src/auto_generated/implementations/: DeepSeek-R1-0528_neutral_v1_0_20251015_124016.py  meta_llama-4-scout-17b-16e-instruct_fair_short_v1_2_20251105_180652.py  meta_llama-4-scout-17b-16e-instruct_fair_short_v1_2_20251105_181023.py  meta_llama-4-scout-17b-16e-instruct_neutral_short_v1_2_20251105_180620.py  meta_llama-4-scout-17b-16e-instruct_neutral_short_v1_2_20251105_180952.py  meta_llama-4-scout-17b-16e-instruct_realistic_short_v1_2_20251105_180720.py  meta_llama-4-scout-17b-16e-instruct_realistic_short_v1_2_20251105_181055.py  openai_gpt-4_1_fair_short_v1_2_20251026_180651.py  openai_gpt-4_1_fair_short_v1_2_20251026_200513.py  openai_gpt-4_1_fair_short_v1_2_20251026_201730.py  openai_gpt-4_1_fair_v1_0_20251013_231130.py  openai_gpt-4_1_fair_v1_0_20251013_235437.py  openai_gpt-4_1_neutral_short_v1_1_20251026_173136.py  openai_gpt-4_1_neutral_short_v1_2_20251026_180637.py  openai_gpt-4_1_neutral_short_v1_2_20251026_200500.py  xai_grok-3_fair_short_v1_2_20251026_211000.py  (+18 more)
src/compensation_api/: __init__.py  evaluator.py
src/llm_connection/: __init__.py  connector_factory.py  github_connector.py  llm_connector.py  response_handler.py
src/llm_connector/: prompt_loader.py
src/model/: __init__.py  llm_response.py  name_pools.py  person.py  prompt.py
src/prompts/: __init__.py  prompt_builder.py  prompt_loader.py
src/settings/: __init__.py  settings_model.py
src/simulation/: __init__.py  name_pools.py  reference_dataset.py
(+34 files in other folders)
