[project]
name = "llm-compensation-bias"
version = "0.1.0"
description = "Exploring bias in large language models through compensation estimation experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
]
