[project]
name = "llm-compensation-bias"
version = "0.1.0"
description = "Exploring bias in large language models through compensation estimation experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.0.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pydantic-settings-yaml>=0.2.0",
    "pyyaml>=6.0.3",
]
