[project]
name = "llm-compensation-bias"
version = "0.1.0"
description = "Exploring bias in large language models through compensation estimation experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pydantic-settings-yaml>=0.2.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=7.0.0",
    "ruff>=0.12.11",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 300
target-version = "py312"
exclude = ["src/auto_generated"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["F821"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
